29-10-2005 Qball <Qball@qballcow.nl>
	* Moved more stuff in player.c to new signal.
	* Made dependency for fixed libmpd signals
	* Added display showing repeat/volume/random changes.. even not
	initiate by gmpc
	* code cleanups... now compiles with -ansi.
	* restoring position after hide now works again.
	* glade/image path are now retrieved using
	gmpc_get_full_{glade|image}_path. this is needed for win32 installer.


07-10-2005 Qball <Qball@qballcow.nl>
	* apply DJWLindenaar's win32 patch

06-09-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:		Fixed single/multiple
	* src/preferences.c:		Fixed single/multiple
	* src/playlist3.c:		move.

	
05-09-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:		Fixed scroll to bug.
	* src/playlist3.c:		added scroll to in detach playlist.
	* src/playlist3.c:		activating row in dp play's song.

04-09-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:		Show folders in right pane view.
	* src/playlist3.c:		First attemped at detachable playlist window.
	* glade/playlist3.glade:	Added a empty window for detachable
	* playlist window.
	*** TESTING MARKUP *** playlist3.c and strfsong.c

01-09-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:		enabled moving by dnd 
	* glade/playlist3.glade:	row reordering

17-08-2005 Qball <Qball@qballcow.nl>
	* autogen.sh:			Enabled libtool stuff
	* ltmain.sh:			Remove, correct link generated by
	autogen.sh
	* po/fr.po:			Updated french translation
14-08-2005 Qball <Qball@qballcow.nl>
	* src/tag-browser.c:		add/replace supported added from right
	mouse menu in tree.
	* src/tray-icon.c:		Added libnotify support (exp.)
	* src/main.c:			Added libnotify init
	* contifure.ac:			Added libnotify compile option
	(--enable-notify)
11-09-2005 Qball <Qball@qballcow.nl>
	* po/POTFILES.in:		fixed entries, so make dist works. 

09-08-2005 Qball <Qball@qballcow.nl>
	* src/pl3_custom_stream.c|h:	Moving some code.
	* src/strfsong.c:		Changed strncmp to memcmp